<resources>
	<string name="app_name">Polyglotte</string>

	<string-array name="android_versions">
		<item>Android 1.5 — Cupcake</item>
		<item>Android 1.6 — Donut</item>
		<item>Android 2.0 — Eclair</item>
		<item>Android 2.2 — Froyo</item>
		<item>Android 2.3 — Gingerbread</item>
		<item>Android 3.0 — Honeycomb</item>
		<item>Android 4.0 — Ice Cream Sandwich</item>
		<item>Android 4.1 — Jelly Bean</item>
		<item>Android 4.4 — KitKat</item>
		<item>Android 5.0 — Lollipop</item>
		<item>Android 6.0 — Marshmallow</item>
		<item>Android 7.0 — Nougat</item>
		<item>Android 8.0 — Oreo</item>
		<item>Android 9 — Pie</item>
		<item>Android 10 — Quince Tart</item>
		<item>Android 11 — Red Velvet Cake</item>
		<item>Android 12 — Snow Cone</item>
		<item>Android 13 — Tiramisu</item>
	</string-array>

	<string name="title_activity_navigation">NavigationActivity</string>

<!--	мб айтеми меню теж винести в стринг массив -->
	<string name="title_alarm">Alarm</string>
	<string name="title_algorithms">Algorithms</string>
	<string name="title_all_features">All features</string>
	<string name="title_anne_droid">Anne Droid</string>
	<string name="title_books">Books</string>
	<string name="title_cars">Cars</string>
	<string name="title_circles">Circles</string>
	<string name="title_crypto">Crypto</string>
	<string name="title_dates">Dates</string>
	<string name="title_deutsch">Deutsch</string>
	<string name="title_english">English</string>
	<string name="title_espanol">Espanol</string>
	<string name="title_finance">Finance</string>
	<string name="title_fitness">Fitness</string>
	<string name="title_francais">Francais</string>
	<string name="title_handmade">Handmade</string>
	<string name="title_holoughts">Holoughts</string>
	<string name="title_ministries">Ministries</string>
	<string name="title_music">Music</string>
	<string name="title_notes">Notes</string>
	<string name="title_nutrition">Nutrition</string>
	<string name="title_scheduler">Scheduler</string>
	<string name="title_self_improvement">Self-improvement</string>
	<string name="title_settings">Settings</string>
	<string name="title_sports">Sports</string>
	<string name="title_stocks">Stocks</string>

	<string name="waiting">waiting…</string>
</resources>
