<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/navigation_cars"
		android:icon="@drawable/ic_car_black_24dp"
		android:title="@string/title_cars"/>

	<item
		android:id="@+id/navigation_crypto"
		android:icon="@drawable/ic_crypto_black_24dp"
		android:title="@string/title_crypto"/>

	<item
		android:id="@+id/navigation_all_features"
		android:icon="@drawable/ic_all_features_black_24dp"
		android:title="@string/title_all_features"/>

	<item
		android:id="@+id/navigation_sports"
		android:icon="@drawable/ic_sports_black_24dp"
		android:title="@string/title_sports"/>

	<item
		android:id="@+id/navigation_stocks"
		android:icon="@drawable/ic_stocks_black_24dp"
		android:title="@string/title_stocks"/>

</menu>
